<resources>
    <string name="app_name">Healthy Scan</string>
    <string name="welcome_bac">Welcome, back!</string>
    <string name="email">Email</string>
    <string name="signup_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="don_t_have_">Don’t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_text">or with</string>
    <string name="create_account">create an account</string>
    <string name="signup_phone_no">Enter Your password </string>
    <string name="signup_btn">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="Login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="virtual">Virtual</string>
    <string name="health_coach">Health coach</string>
    <string name="virtual_coach_image">virtual coach image</string>
    <string name="easy">Easy</string>
    <string name="report_scan">Report scan</string>
    <string name="report_image">report image</string>
    <string name="set_your">Set Your</string>
    <string name="health_goals">Health Goals</string>
    <string name="health_golas_image">health golas image</string>
    <string name="doctors">Doctors</string>
    <string name="near_you">Near You</string>
    <string name="menu_image">menu image</string>
    <string name="location_image">location image</string>
    <string name="coach">coach</string>
    <string name="home">Home</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">760625031138-99mv0o3m6cm0hha0js1sa0p980j44rq0.apps.googleusercontent.com</string>
    <string name="heading_one">Just a scan away from understanding your own reports!</string>
    <string name="heading_two">Find the nearest locations of healthcare centers and doctors for your health needs now</string>
    <string name="heading_three">Set goals for yourself to stay healthy with healthy scan</string>

</resources>