<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email"
            android:layout_width="54dp"
            android:layout_height="21dp"
            android:text="@string/email"
            android:textAppearance="@style/email"
            android:gravity="center_horizontal|top"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_design"
            android:padding="15dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/email_text"
            android:hint="Enter your username"
            android:inputType="textEmailAddress"
            android:textColorHint="#7A88B1">
        </EditText>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/email"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_design"
            android:padding="15dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/email_text"
            android:hint="Enter your Password"
            android:inputType="textEmailAddress"
            android:textColorHint="#7A88B1">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me"
                    android:textAppearance="@style/remember_me"
                    android:gravity="top"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="134dp"
                    android:layout_height="23dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_pass"
                    android:textAppearance="@style/forgot_pass"
                    android:gravity="top"/>
            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_signup_button_bg"/>

    </LinearLayout>

</LinearLayout>